[package]
name = "import_stock_price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.3"
csv = "1.1.6"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
chrono = "0.4.19"
chrono-tz = "0.6.1"
rust_decimal = { version = "1.23.1", features = ["db-tokio-postgres"] }
futures = "0.3.21"
